fixed white space

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html,
+body {
+  @apply p-0 m-0 overflow-hidden h-full w-full;
+}
